--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "angular": "1.5.0",
-    "angular-ui-router": "^0.2.18",
+    "angular-messages": "1.5.0",
+    "angular-ui-router": "0.2.18",
     "babel": "^5.0.12",
     "bluebird": "^2.9.34",
     "body-parser": "^1.12.0",
